--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 /* DEBUG */
 .debug{
@@ -44,6 +44,7 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
+    border: 1px solid grey;
 }
 
 #contact-sct{
@@ -95,7 +96,6 @@ body{
 .notifications{
     display: flex;
     align-items: center;
-    border: 1px solid black;
     height: 70px;
     background-color: #8ED9FC;
 }
@@ -110,6 +110,10 @@ body{
     background-color: #fff;   
     border-radius: 50%;
     color: #8ED9FC;
+}
+
+.notification-info a{
+    color: #4E7486;
 }
 /* /NOTIFICATION CTO */
 
@@ -172,7 +176,10 @@ body{
 /* /ACTIVE CHATS */
 
 /* CHAT SECTION TOP */
-
+.active-user {
+    background-color: #EAEAEA;
+    border-left: 1px solid lightgrey;
+}
 .user {
     display: flex;
     padding: 10px;
@@ -204,9 +211,45 @@ body{
 
 .text-area{
     width: 100%;
-    height: calc(100% - 80px);
+    height: calc(100% - 135px);
     background-image: url(../img/mine.jpg);
     background-size: contain;
 }
 /* /TEXT AREA */
+
+/* CHAT SECTION BOTTOM */
+.text-input {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 55px;
+    background-color: #F3EEEA;
+    padding: 8px;
+}
+
+.text-emoji,
+.audio-record{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 100%;
+    font-size: 22px;
+    color: #6C7375;
+}
+.input-sct{
+    height: 100%;
+    width: calc(100% - 100px);
+}
+
+.input-sct input{
+    padding: 10px;
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    border: 2px solid #037AFF;
+
+}
+/* /CHAT SECTION BOTTOM */
 /* /APP WINDOW */
