--- a/style/style.css
+++ b/style/style.css
@@ -210,10 +210,48 @@ body{
 /* TEXT AREA */
 
 .text-area{
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: calc(100% - 135px);
     background-image: url(../img/mine.jpg);
     background-size: contain;
+    padding: 35px;
+}
+
+.message{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 5px 0;
+    max-width: 50%;
+    min-width: 250px;
+    min-height: 45px;
+}
+
+.text-message{
+    padding: 10px;
+}
+
+.message-time{
+    align-self: flex-end;
+    padding: 3px;
+    font-size: 12px;
+    color: #CACCCE;
+}
+
+.sent{
+    background-color: #D5F9BA;
+    align-self: flex-end;
+}
+
+.delivered{
+    background-color: #fff;
+}
+
+.sent,
+.delivered{
+    border-radius: 10px;
 }
 /* /TEXT AREA */
 
@@ -251,5 +289,7 @@ body{
     border: 2px solid #037AFF;
 
 }
+
+
 /* /CHAT SECTION BOTTOM */
 /* /APP WINDOW */
