--- a/style/style.css
+++ b/style/style.css
@@ -243,10 +243,57 @@ body{
     max-width: 60%;
     min-width: 250px;
     flex-grow: 0;
+    position: relative;
+}
+
+#msg-chevron{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    text-align: center;
+    text-decoration: none;
+}
+
+#msg-chevron i{
+    font-size: 12px;
+    display: none;
+}
+
+#msg-chevron:hover i{
+    display: block;
+}
+
+#msg-chevron i:click{
+    transform: rotate(180deg);
+}
+
+.drop-down{
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: 90%;
+    width: 150px;
+    background-color: white;
+    z-index: 999;
+    cursor: pointer;
+}
+
+.drp-dwn-sent{
+    position: absolute;
+    top: 40px;
+    left: 90px;
+}
+
+.drop-down p{
+    height: 35px;
+    padding: 8px 0 0 8px;
+    border-top: 1px solid lightgrey;
 }
 
 .text-message{
-    padding: 10px;
+    padding: 15px;
 }
 
 .message-time{
@@ -304,8 +351,6 @@ body{
     width: 100%;
     border-radius: 5px;
     border: none;
-    /* border: 2px solid #037AFF; */
-
 }
 
 
